# target-lightspeed-rseries-migration

./: README.md  meltano.yml  pyproject.toml
target_lightspeedrseries/: __init__.py  auth.py  client.py  sinks.py  target.py
