[tool.poetry]
name = "target-lightspeedrseries"
version = "0.0.1"
description = "`target-lightspeedrseries` is a Singer target for LightspeedRSeries, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Mário Costa <mariocosta@optiply.nl>"]
keywords = [
    "ELT",
    "LightspeedRSeries",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
target-hotglue = "^0.0.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_lightspeedrseries"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_lightspeedrseries"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-lightspeed-r-series = 'target_lightspeedrseries.target:TargetLightspeedRSeries.cli'